修正箇所修正

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -109,14 +109,31 @@
                         広大な敷地内に設置された<br />
                         戦略性に富むオリジナルコース
                     </h3>
-                    <p class="media__text">
+                    {% comment %} <p class="media__text">
+                        
                         7000ヤード越えのロングディスタンスのコースは、<br />
                         ツーグリーンと比べてグリーンの面積が広くて<br />
                         難しい場合が多い、ベントのワングリーン<br />
                         身長よりも高いリベットバンカー、<br />
                         レンガに囲まれた大きな池など、<br />
                         戦略的で魅力的なコースがお待ちしています。
+                    </p> {% endcomment %}
+
+                    <p class="media__text">
+                    尾崎将司プロと佐藤謙太郎氏の設計・監修による、<br>
+                    豊富なデータを生かした特徴的なコースデザイン。<br>
+
+                    7,023ヤードというロングディスタンスのコースは、<br>
+                    ベントのワングリーンやそそり立つリベットバンカー、<br>
+                    レンガに囲まれた大きな池など、<br>
+                    美しさと戦略性が見事なバランスを保ち、<br>
+                    プレイヤーの挑戦意欲をかき立てます。<br>
+
+                    四季を通じて美しい緑を舞台に、<br>
+                    ベストコンディションでプレイが楽しめます。<br>
                     </p>
+
+                    
                     <a href="{{pages.course.url}}" class="media__btn">詳細はこちら</a>
                 </div>
             </article>
@@ -137,7 +154,7 @@
                 >
                     <p class="media__num section__num">02.</p>
                     <h3 class="media__ttl">
-                        ゴルフ場までの距離0m.<br />
+                        ゴルフ場までの距離0m<br />
                         日本の伝統美を感じるロッジへの滞在
                     </h3>
                     <p class="media__text">
@@ -193,7 +210,7 @@
 
             <section class="eventInfo">
                 <div class="eventInfo__inner">
-                    <p class="eventInfo__num section__num">04</p>
+                    <p class="eventInfo__num section__num">04.</p>
                     <h2 class="eventInfo__ttl">EVENT INFO</h2>
                     <h3 class="eventInfo__subTtl">イベント情報</h3>
 
@@ -220,7 +237,7 @@
             </section>
 
             <section class="access">
-                <p class="access__num section__num">05</p>
+                <p class="access__num section__num">05.</p>
                 <h2 class="access__ttl">access</h2>
                 <h3 class="access__subTtl">アクセス</h3>
                 <address class="address">
