--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -32,7 +32,7 @@
                 </ul>
             </nav>
             <div id="reserve" class="sectionHeading">
-                <p class="eventInfo__num section__num">01</p>
+                <p class="eventInfo__num section__num">01.</p>
                 <h2 class="eventInfo__ttl">Reserve</h2>
                 <h3 class="eventInfo__subTtl reserve__subTtl">ご予約</h3>
             </div>
@@ -45,7 +45,7 @@
                 ></iframe>
             </div>
             <div id="price" class="sectionHeading">
-                <p class="eventInfo__num section__num">02</p>
+                <p class="eventInfo__num section__num">02.</p>
                 <h2 class="eventInfo__ttl">price</h2>
                 <h3 class="eventInfo__subTtl price__subTtl">料金表</h3>
             </div>
