--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -222,7 +222,7 @@
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
-                                        src="{{article.image.src | img_url : '2000x'}}"
+                                        src="{{article.image.src | image_url : width: 500px}}"
                                         alt="津カントリー倶楽部　イベント情報"
                                     />
                                 </figure>
