--- a/templates/blog.liquid
+++ b/templates/blog.liquid
@@ -24,7 +24,7 @@
                         <a href="{{article.url}}" class="post">
                             <figure class="post__figure">
                                 <img
-                                    src="{{article.image.src | img_url : '2000x'}}"
+                                    src="{{article.image.src | image_url : width: 500px}}"
                                     width="538"
                                     height="282"
                                     alt="津カントリー倶楽部　イベント情報"
