--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -10,7 +10,7 @@
                     <h2 class="guidance__ttl--en">Guidance</h2>
                     <h3 class="guidance__ttl--ja">ご案内</h3>
                 </div>
-                <div class="guidance__img"><img src="{{ article.image.src | image_url }}" alt=""></div>
+                <div class="guidance__img"><img src="{{article.image.src | image_url : width: 500px}}" alt=""></div>
                 <h1 class="heading-lv1">{{article.title}}</h1>
                 <article class="heading-lv2__wrap">
                   {{article.content}}
@@ -26,7 +26,7 @@
                                 <figure class="card__figure">
                                     <img
                                         class="card__img"
-                                        src="{{article.image.src | img_url : '2000x'}}"
+                                        src="{{article.image.src | image_url : width: 500px}}"
                                         alt="津カントリー倶楽部　イベント情報"
                                     />
                                 </figure>
