--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -41,9 +41,7 @@
                 </ul>
 
                 <a href="{{ pages.reserve.url }}" class="btn btn--l">ご予約 / 料金</a>
-                <a href="" class="sns sns--menu"
-                    ><span class="fa-facebook-square"></span
-                ></a>
+                <a href="" class="sns sns--menu"><i class="fa-brands fa-facebook-square"></i></a>
 
                 <p class="copyright">
                     <small class="copyright__txt copyright__txt--menu"
@@ -127,9 +125,7 @@
                 </ul>
 
                 <a href="{{ pages.reserve.url }}" class="btn btn--l">ご予約 / 料金</a>
-                <a href="" class="sns sns--menu"
-                    ><span class="fa-facebook-square"></span
-                ></a>
+                <a href="" class="sns sns--menu"><i class="fa-brands fa-facebook-square"></i></a>
 
                 <p class="copyright">
                     <small class="copyright__txt copyright__txt--menu"
