--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1814,7 +1814,7 @@ th {
   content: "\f082";
   color: #363636;
   font-size: 30px;
-  font-family: "Font Awesome 5 Free"; /*←ココ！！！！！！！*/
+  font-family: "Font Awesome 5 Brand"; /*←ココ！！！！！！！*/
 }
 
 .section__ttl {
