--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1811,10 +1811,10 @@ th {
 }
 
 .fa-facebook-square:before {
+  font-family: "Font Awesome 6 Brand"; /*←ココ！！！！！！！*/
   content: "\f082";
   color: #363636;
   font-size: 30px;
- 
 }
 
 .section__ttl {
