--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1792,7 +1792,7 @@ th {
 @font-face {
   font-style: normal;
   font-weight: normal;
-  src: url("../../assets/fonts/fontawesome/icomoon.ttf?vitycs") format("truetype"), url("../../assets/fonts/fontawesome/icomoon.woff?vitycs") format("woff"), url("../../assets/fonts/fontawesome/icomoon.svg?vitycs#icomoon") format("svg");
+  src: url("icomoon.ttf?vitycs") format("truetype"), url("icomoon.woff?vitycs") format("woff"), url("icomoon.svg?vitycs#icomoon") format("svg");
   font-family: "icomoon";
   font-display: block;
 }
@@ -1811,7 +1811,6 @@ th {
 }
 
 .fa-facebook-square:before {
-  font-family: "Font Awesome 6 Brand"; /*←ココ！！！！！！！*/
   content: "\f082";
   color: #363636;
   font-size: 30px;
