神社コンテンツの画像追加

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -170,17 +170,17 @@
                         <article class="media">
                 <figure class="media__img">
                     <img
-                        src="{{ 'golf-originalCourse-pc.jpg' | asset_img_url: '3000x'}}"
+                        src="{{ 'jinja.jpg' | asset_img_url: '3000x'}}"
                         width="513"
                         height="311"
-                        alt="戦略性に富むオリジナルコース"
+                        alt="倶楽部を見守る椿大神社"
                         class="media__img--pc"
                     />
                     <img
-                        src="{{ 'golf-originalCourse-sp.jpg' | asset_img_url: '3000x'}}"
+                        src="{{ 'jinja.jpg' | asset_img_url: '3000x'}}"
                         width="513"
                         height="311"
-                        alt="戦略性に富むオリジナルコース"
+                        alt="倶楽部を見守る椿大神社"
                         class="media__img--sp"
                     />
                 </figure>
