--- a/templates/page.policy.liquid
+++ b/templates/page.policy.liquid
@@ -1,6 +1,7 @@
 <div class="section_container">
         <div class="section_inner">
-           {{page.content}}
+            <div class="section_title font02">プライバシーポリシー</div>
+            {{page.content}}
 
 
 
