--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2575,6 +2575,20 @@ th {
     background: url("{{ 'mainvisual-pc.jpg' | asset_img_url: '3000x'}}");
 
   }
+  .slider-1__item02{
+    background: url("{{ 'mainvisual-pc.jpg' | asset_img_url: '3000x'}}");
+
+  }
+  .slider-1__item03{
+    background: url("{{ 'mainvisual-pc.jpg' | asset_img_url: '3000x'}}");
+
+  }
+  .slider-1__item04{
+    background: url("{{ 'mainvisual-pc.jpg' | asset_img_url: '3000x'}}");
+
+  }
+
+
   .slider-1__item{
     height: 491px;
     background-position: center;
