スライダー画像追加

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2576,15 +2576,15 @@ th {
 
   }
   .slider-1__item02{
-    background: url("{{ 'mainvisual-pc.jpg' | asset_img_url: '3000x'}}");
+    background: url("{{ 'golf-course-pc.jpg' | asset_img_url: '3000x'}}");
 
   }
   .slider-1__item03{
-    background: url("{{ 'mainvisual-pc.jpg' | asset_img_url: '3000x'}}");
+    background: url("{{ 'loge-villa-pc.jpg' | asset_img_url: '3000x'}}");
 
   }
   .slider-1__item04{
-    background: url("{{ 'mainvisual-pc.jpg' | asset_img_url: '3000x'}}");
+    background: url("{{ 'golf-originalCourse-pc.jpg' | asset_img_url: '3000x'}}");
 
   }
 
