スライダーセクションに追加

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2589,7 +2589,7 @@ th {
   }
 
 
-  .slider-1__item{
+  #slider-1__item{
     height: 491px;
     background-position: center;
     background-size: cover;
