スライダー高さ調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2571,25 +2571,10 @@ th {
   .slider-1 .slick-dots li button:before{
     height: 1px;
   }
-  .slider-1__item01{
-    background: url("{{ 'mainvisual-pc.jpg' | asset_img_url: '3000x'}}");
-
-  }
-  .slider-1__item02{
-    background: url("{{ 'golf-course-pc.jpg' | asset_img_url: '3000x'}}");
-
-  }
-  .slider-1__item03{
-    background: url("{{ 'loge-villa-pc.jpg' | asset_img_url: '3000x'}}");
-
-  }
-  .slider-1__item04{
-    background: url("{{ 'golf-originalCourse-pc.jpg' | asset_img_url: '3000x'}}");
-
-  }
 
 
-  #slider-1__item{
+
+  .slider-1__item{
     height: 491px;
     background-position: center;
     background-size: cover;
