--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -36,14 +36,21 @@
                 <h2 class="eventInfo__ttl">Reserve</h2>
                 <h3 class="eventInfo__subTtl reserve__subTtl">ご予約</h3>
             </div>
-            <div class="iframe-plan">
-                <iframe
-                    src="https://webpack2.jp/iframeApp/533302"
-                    width="566"
-                    height="361"
-                    style="margin: 0 auto"
-                ></iframe>
-            </div>
+            {% comment %} iframe押せない問題の対応 {% endcomment %}
+
+                {% case responsive %}
+                    {%  when 'desktop' %}
+                        {%render 'iframe-pc'%}
+                    {%  when 'tablet' %}
+                        {%render 'iframe-pc'%}
+                    {%  when 'mobile' %}
+                        {%render 'iframe-splink'%}
+                {% endcase %}
+                    
+
+
+            {% comment %} ここまで {% endcomment %}
+
             <div id="price" class="sectionHeading">
                 <p class="eventInfo__num section__num">02.</p>
                 <h2 class="eventInfo__ttl">price</h2>
