iframeの出しわけ

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2037,6 +2037,21 @@ th {
   width: 165%;
   height: 100%;
 }
+
+
+.iframe-plan-sp{
+  display: none;
+}
+
+@media(max-width: 600px) {
+  .iframe-plan{
+    display: none;
+  }
+  .iframe-plan-sp{
+    display: block;
+  }
+}
+
 @media (max-width: 850px){
   .br{
     display: block;
