iframeの出しわけ

--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -51,7 +51,7 @@
 
 
 
-            <a class="iframe-plan-sp" href="https://webpack2.jp/iframeApp/533302" style = text-align: center;>
+            <a class="iframe-plan-sp" href="https://webpack2.jp/iframeApp/533302">
               予約はこちらからバナーが入る
             </a>
 
