headerのロゴにリンクを設定する

--- a/templates/page.course.liquid
+++ b/templates/page.course.liquid
@@ -1,12 +1,12 @@
 
 
         <main>
-            <p class="brandLogo">
+            <a class="brandLogo" href="{{ shop.url }}">
                 <img
                     src="{{ 'pageLogo-sp.png' | asset_img_url: '3000x'}}"
                     alt="津カントリー倶楽部"
                 />
-            </p>
+            </a>
 
             <section class="pageVisual pageVisual--res-price">
                 <div class="pageVisual__inner">
