headerのロゴにリンクを設定する

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1193,7 +1193,9 @@ body {
   margin: 0 auto 6.8vw;
   padding-top: 6.25vw;
   text-align: center;
+  display: block;
 }
+
 .brandLogo img {
   width: 100%;
 }
