電話番号の調整

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -247,9 +247,9 @@
                         三重県津市片田長谷町30番地
                     </p>
                     <p class="address__tel--pc">
-                        0120-80-3700<br />
-                        059-237-3580<br />
-                        059-237-3612
+                        予約番号：0120-80-3700<br />
+                        電話番号：059-237-3580<br />
+                        FAX番号：059-237-3612
                     </p>
                     <a class="address__tel" href="tel:090-9090-0990"
                         ><span class="address__tel--inner"
