エラーの処理

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -6,7 +6,7 @@
   
   {% if template == 'index' %}
   <title>{{ shop.name }}</title>
-  {% elsif template = '404' %}
+  {% elsif template == '404' %}
   <title>Page Not Found | {{ shop.name }}</title>
   {% else %}
   <title>{{ page_title }} | {{ shop.name }}</title>
