エラーの処理

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2610,6 +2610,10 @@ th {
     bottom: 33.3333333333vw;
     left: -33.3333333333vw;
   }
+
+  .slider2 .slickdots li button:before{
+    
+  }
   .slider-2__item{
     width: 95.0833333333vw !important;
     height: 59.6666666667vw !important;
@@ -5087,5 +5091,14 @@ textarea {
 
 /* 問い合わせここまで */
 
+
+
+/* 文字サイズ最終調整 0425 */
+
+@media (max-width: 650px){
+  .siteTtl{
+    font-size: 14px;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
