文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5097,7 +5097,26 @@ textarea {
 
 @media (max-width: 650px){
   .siteTtl{
-    font-size: 17vw;
+    font-size: 7vw;
+  }
+
+  .siteLogo{
+    width: 150px;
+  }
+  .section__ttl{
+    font-size: 30px;
+  }
+  .section__subTtl{
+    font-size: 18px;
+  }
+  .slider2__ttl{
+    font-size: 28px;
+  }
+  .slider-2__text{
+    font-size: 14px;
+  }
+  .btn{
+    font-size: 14px;
   }
 }
 
