文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5118,6 +5118,10 @@ textarea {
   .btn{
     font-size: 14px;
   }
+  .slider-2{
+    height: auto;
+    padding: 60px 0;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
