文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5106,10 +5106,10 @@ textarea {
   .section__ttl{
     font-size: 30px;
   }
-  .section__subTtl{
+  .slider-2__subTtl{
     font-size: 18px;
   }
-  .slider2__ttl{
+  .slider-2__ttl{
     font-size: 28px;
   }
   .slider-2__text{
