文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5108,6 +5108,7 @@ textarea {
   }
   .slider-2__subTtl{
     font-size: 18px;
+    margin-bottom: 20px;
   }
   .slider-2__ttl{
     font-size: 28px;
