--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5106,16 +5106,20 @@ textarea {
   .section__ttl{
     font-size: 30px;
   }
+  .section__subTtl{
+    font-size: 15px;
+  }
   .slider-2__subTtl{
     font-size: 18px;
     margin-bottom: 20px;
   }
   .slider-2__ttl{
-    font-size: 28px;
+    font-size: 25px;
   }
   .slider-2__text{
     font-size: 14px;
   }
+
   .btn{
     font-size: 14px;
   }
