文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5104,20 +5104,20 @@ textarea {
     width: 150px;
   }
   .section__ttl{
-    font-size: 30px;
+    font-size: 25px;
   }
   .section__subTtl{
     font-size: 15px;
   }
   .slider-2__subTtl{
-    font-size: 18px;
+    font-size: 15px;
     margin-bottom: 20px;
   }
   .slider-2__ttl{
-    font-size: 25px;
+    font-size: 18px;
   }
   .slider-2__text{
-    font-size: 14px;
+    font-size: 13px;
   }
 
   .btn{
@@ -5126,6 +5126,9 @@ textarea {
   .slider-2{
     height: auto;
     padding: 60px 0;
+  }
+  .slider-2__item{
+    height: auto !important; 
   }
 }
 
