文字サイズの調整

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -17,7 +17,7 @@
                         </h3>
                         <p class="slider-2__text">
                             企業・団体に所属するメンバー、ご家族、友人、お取引先のかたに<br />弊施設をご利用いただける取り組みです。<br />
-                            広い駐車場、送迎バス、ご家族で自由にお楽しみいただける<br />エンジェルパーク、屋外トランポリン、ゴルフ上達のための「天空塾」、サテライトオフィスEZドーム宿泊施設「Katad&nbsp;Lodge&Villa」など充実した施設があります。
+                            広い駐車場、送迎バス、ご家族で自由にお楽しみいただける<br />エンジェルパーク、屋外トランポリン、ゴルフ上達のための「天空塾」、サテライトオフィスEZドーム宿泊施設「Katada&nbsp;Lodge&Villa」など充実した施設があります。
                         </p>
                         <a href="#" class="btn btn--wh">詳細はこちら</a>
                         <a href="#" class="btn btn--vw">詳細はこちら</a>
