文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5130,6 +5130,45 @@ textarea {
   .slider-2__item{
     height: auto !important; 
   }
+
+  /* 01~セクション */
+  .media__ttl{
+    font-size: 15.5px;
+  }
+  .media__text{
+    font-size: 13px;
+  }
+  .section__num{
+    font-size: 16px;
+  }
+  .eventInfo__ttl, .access__ttl{
+    font-size: 16px;
+  }
+  .eventInfo__subTtl,
+  .card__ttl,
+  .card__link,
+  .access__subTtl,
+  .address{
+    font-size: 12.5px;
+  }
+  
+  .card__link:before{
+    top: 5px;
+    right: 70px;
+    left: auto;
+  }
+
+  .btn{
+    width: 190px;
+  }
+
+  .eventInfo__btn{
+    margin: 10px auto;
+  }
+  .access__btn{
+    font-size: 14px;
+  }
+
 }
 
 /*# sourceMappingURL=main.css.map */
