文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5165,7 +5165,7 @@ textarea {
   .eventInfo__btn{
     margin: 10px auto;
   }
-  .access__btn{
+  .access__btn, .media__btn{
     font-size: 14px;
   }
 
