文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5151,10 +5151,20 @@ textarea {
   .address{
     font-size: 12.5px;
   }
+
+  .post__link2{
+    font-size: 14px;
+  }
   
   .card__link:before{
     top: 5px;
     right: 70px;
+    left: auto;
+  }
+
+  .post__link2:before{
+    top: 7px;
+    right: 97px;
     left: auto;
   }
 
