文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5141,18 +5141,34 @@ textarea {
   .section__num{
     font-size: 16px;
   }
-  .eventInfo__ttl, .access__ttl{
+  .eventInfo__ttl, 
+  .access__ttl,
+  .pageTtl__en,
+  .guidance__ttl--en,
+  .pageVisual__text--en{
     font-size: 16px;
   }
   .eventInfo__subTtl,
   .card__ttl,
   .card__link,
   .access__subTtl,
-  .address{
+  .address,
+  .pageTtl__ja,
+  .guidance__ttl--ja,
+  .pageVisual__text--ja,
+  .faci-post__excerpt,
+  .accordion__text{
     font-size: 12.5px;
   }
 
-  .post__link2{
+  .thumbnail__ttl--ja,
+  .thumbnail__ttl--en{
+    font-size: 12px;
+  }
+
+  .post__link2,
+  .pageNav__item,
+  .accordion__title{
     font-size: 14px;
   }
   
@@ -5179,6 +5195,11 @@ textarea {
     font-size: 14px;
   }
 
+
+  .post__date,
+  .post__excerpt{
+    font-size: 13px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
