文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5178,11 +5178,11 @@ textarea {
     left: auto;
   }
 
-  /* .post__link2:before{
+  .post__link2:before{
     top: 7px;
-    right: 97px;
+    right: 137px;
     left: auto;
-  } */
+  }
 
   .btn{
     width: 190px;
