文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5180,12 +5180,13 @@ textarea {
 
   .post__link2:before{
     top: 7px;
-    right: 137px;
+    right: 97px;
     left: auto;
   }
 
   .btn{
     width: 190px;
+    height: 25px;
   }
 
   .eventInfo__btn{
