文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5201,6 +5201,15 @@ textarea {
   .post__excerpt{
     font-size: 13px;
   }
+
+  #hamburger{
+    top: 40px;
+
+  }
+
+  #hamburger__bar{
+    height: 2px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
