文字サイズの調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5210,6 +5210,9 @@ textarea {
   #hamburger__bar{
     height: 1.5px !important; 
   }
+  .brandLogo{
+    width: 200px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
