文字サイズの調整

--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -332,7 +332,7 @@
                 <p class="table__note">ネット予約：</p>
             </div>
             <div class="res-price__btn--wrap">
-                <a href="{{pages.course.url}}" class="btn res-price__btn1">コースガイドはこちら</a>
+                <a href="{{pages.course.url}}" class="btn res-price__btn1">コースガイド</a>
                 <a href="{{pages.facility.url}}" class="btn res-price__btn2">施設案内はこちら</a>
             </div>
         </main>
