文字サイズの調整

--- a/templates/page.tokushohou.liquid
+++ b/templates/page.tokushohou.liquid
@@ -19,14 +19,13 @@
 
             <div class="section_text font02">
                 <span class="bold">所在地</span><br>
-                〒113-0033<br>
-                東京都 文京区本郷３丁目３８−１<br>
-                本郷信徳ビル 1F
+                〒514-0077<br>
+                三重県津市片田長谷町３０
             </div>
 
             <div class="section_text font02">
                 <span class="bold">電話番号</span><br>
-                03-5689-8929<br>
+                059-237-3580<br>
                 ※お客様からの商品に関するお問い合わせは電話では受け付けておりません。<br>
                 大変申し訳ありませんが、お問い合わせについては「お問い合わせ」フォームよりメールにてご連絡をお願いします。
 
@@ -34,13 +33,9 @@
 
             <div class="section_text font02">
                 <span class="bold">メールアドレス</span><br>
-                メールアドレス
+                メールアドレスあればここに反映
             </div>
 
-            <div class="section_text font02">
-                <span class="bold">URL</span><br>
-                <a href="#">リンク</a>
-            </div>
 
             <div class="section_text font02">
                 <span class="bold">販売価格について</span><br>
@@ -59,7 +54,7 @@
                 ・保管期間を過ぎたお荷物は、お受け取り辞退となり当店へ返品されます。<br>
                 ・返品時には通常運賃(着払い)での返品送料が個数分発生し、その際の往復分の送料は実費を、ご請求させて頂きますのでご注意ください。<br>
                 ・一度お受け取り辞退となった商品の再送をご希望の場合は、返品送料とは別に再送料が発生致します。<br>
-                ・長期のご不在・受取拒否等vで商品が弊社へ返送、その後キャンセル等の場合は、その際の往復分の送料は実費を、ご請求させて頂きますのでご注意ください。<br>
+                ・長期のご不在・受取拒否等で商品が弊社へ返送、その後キャンセル等の場合は、その際の往復分の送料は実費を、ご請求させて頂きますのでご注意ください。<br>
                 ※ご住所不明などで、お届けできない場合も対象となります※<br>
                 ・ご注文時には番地や部屋番号等を、必ずご確認のうえご住所をご登録下さい。<br>
                 ・引越し等で住所が変更になった場合はお問い合わせフォームより新しいご住所をご連絡お願いします。
