スライダーのスピード調整

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -99,14 +99,14 @@
                         class="media__img--sp"
                     />
                 </figure>
-                <div
+                
                     class="media__body js-rellax"
                     data-rellax-speed="3"
                     data-rellax-percentage="0.5"
                 >
                     <p class="media__num section__num">01.</p>
                     <h3 class="media__ttl">
-                        広大な敷地内に設置された<br />
+                        広大な敷地内にレイアウトされた<br />
                         戦略性に富むオリジナルコース
                     </h3>
                     {% comment %} <p class="media__text">
@@ -192,16 +192,16 @@
                     <p class="media__num section__num">03.</p>
                     <h3 class="media__ttl">
                         地域を守ってくれている神様<br />
-                        椿大神社との繋がり
+                        椿神山との繋がり
                         
                     </h3>
                     <p class="media__text">
                         津カントリー倶楽部の近隣には二千年の歴史を持つ<br />
-                        日本最古の神社である椿大神社があります。<br />
-                        深い竹林の向こうにある椿大神社は、<br />
+                        日本最古の神社である椿神山があります。<br />
+                        深い竹林の向こうにある椿神山は、<br />
                         津カントリー倶楽部のクラブハウス真正面方向に位置します。<br />
-                        椿大神社にも大黒様がいらっしゃいます。<br />
-                        椿大神社はゴルフ場全てを見渡す場所にあるので、<br />
+                        椿神山にも大黒様がいらっしゃいます。<br />
+                        椿神山はゴルフ場全てを見渡す場所にあるので、<br />
                         毎日私たちのプレーを見守ってくれています。
                     </p>
                     
