スライダーのスピード調整

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -99,7 +99,7 @@
                         class="media__img--sp"
                     />
                 </figure>
-                
+                <div
                     class="media__body js-rellax"
                     data-rellax-speed="3"
                     data-rellax-percentage="0.5"
