スライダーのドットを大きくする

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1325,6 +1325,7 @@ body {
 }
 .slider-1 .slick-dots li.slick-active button:before {
   background: #041D00;
+  font-size: 20px !important;
 }
 
 .slider-1__item01 {
