スライダーのドットを大きくする

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1325,7 +1325,6 @@ body {
 }
 .slider-1 .slick-dots li.slick-active button:before {
   background: #041D00;
-  font-size: 20px !important;
 }
 
 .slider-1__item01 {
@@ -1395,6 +1394,15 @@ body {
   width: 1.71875vw;
   height: 82.1875vw;
 }
+
+.slider-2 .slick-dots{
+  z-index: 3;
+  position: relative;
+  font-size: 20px !important;
+  background: red;
+}
+
+
 
 .slider-3 .slick-dots {
   z-index: 3;
