スライダーのドットを大きくする

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1395,7 +1395,7 @@ body {
   height: 82.1875vw;
 }
 
-.slider-2 .slick-dots{
+.slider-2 .slick-dots li button{
   z-index: 3;
   position: relative;
   font-size: 20px !important;
