--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1398,10 +1398,13 @@ body {
 .slider-2 .slick-dots li button{
   z-index: 3;
   position: relative;
-  font-size: 20px !important;
+  
   background: red;
 }
 
+.slider-2 .slick-dots li button:before{
+  font-size: 20px !important;
+}
 
 
 .slider-3 .slick-dots {
