--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1398,12 +1398,11 @@ body {
 .slider-2 .slick-dots li button{
   z-index: 3;
   position: relative;
-  
-  background: red;
 }
 
 .slider-2 .slick-dots li button:before{
-  font-size: 20px !important;
+  font-size: 80px !important;
+  color: #fff;
 }
 
 
