スライダーのドットを大きくする

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2628,7 +2628,8 @@ th {
   .slider-2__item{
     width: 95.0833333333vw !important;
     height: 59.6666666667vw !important;
-    margin-left: -2.6666666667vw;
+    /* margin-left: -2.6666666667vw; */
+    margin-left: 0;
     padding-left: 0;
   }
   .slider-2__ttl{
