aboutの背景調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2616,6 +2616,7 @@ th {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
   }
   .slider-2 .slick-dots{
     bottom: 33.3333333333vw;
@@ -5226,5 +5227,9 @@ textarea {
     width: 200px;
   }
 }
+
+
+/* CSSアニメーション 波紋*/
+.slider-2 .slick-dots li button:before
 
 /*# sourceMappingURL=main.css.map */
