--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2616,7 +2616,7 @@ th {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: fixed !important;
   }
   .slider-2 .slick-dots{
     bottom: 33.3333333333vw;
