aboutの背景調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5230,6 +5230,6 @@ textarea {
 
 
 /* CSSアニメーション 波紋*/
-.slider-2 .slick-dots li button:before
+/* .slider-2 .slick-dots li button:before */
 
 /*# sourceMappingURL=main.css.map */
