aboutの背景調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1348,6 +1348,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 .slider-2 .slick-dots {
   bottom: 77vw;
@@ -2616,7 +2617,7 @@ th {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed !important;
+    background-attachment: fixed;
   }
   .slider-2 .slick-dots{
     bottom: 33.3333333333vw;
