--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -953,6 +953,7 @@ body {
   font-family: trajan-pro-3, serif;
   letter-spacing: 0.4em;
   text-align: center;
+  text-shadow: #000 4px 4px 10px;
 }
 
 .siteLogo {
