--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1345,7 +1345,7 @@ body {
   position: relative;
   width: 100%;
   height: 148.59375vw;
-  background: url("{{ 'sunset.JPG' | asset_img_url: '3000x'}}");
+  background: url("{{ 'golr-course-sp.jpg' | asset_img_url: '3000x'}}");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
