--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1349,7 +1349,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
 }
 .slider-2 .slick-dots {
   bottom: 77vw;
