--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1444,6 +1444,11 @@ body {
 .slider-2 .slick-dots li button{
   z-index: 3;
   position: relative;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+
 }
 
 .slider-2 .slick-dots li button:before{
@@ -1452,6 +1457,11 @@ body {
   position: absolute;
   z-index: 4; 
   content: "";
+  /* width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff; */
+
 }
 
 .slider-2 .slick-dots li button:before,
