--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1464,6 +1464,10 @@ body {
 
 }
 
+.slider-2 .slick-dots .slick-active button{
+  background-color: #000 !important;
+}
+
 .slider-2 .slick-dots li button:before,
 .slider-2 .slick-dots li button:after{
   
