--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1455,6 +1455,7 @@ body {
   font-size: 80px !important;
   color: #fff;
   position: absolute;
+  opacity: .5;
   z-index: 4; 
   content: "";
   /* width: 20px;
@@ -1466,6 +1467,7 @@ body {
 
 .slider-2 .slick-dots .slick-active button{
   background-color: #000 !important;
+  opacity: 1;
 }
 
 .slider-2 .slick-dots li button:before,
