--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1467,7 +1467,7 @@ body {
 
 .slider-2 .slick-dots .slick-active button{
   background-color: #000 !important;
-  opacity: 1;
+  opacity: 1 !important;
 }
 
 .slider-2 .slick-dots li button:before,
