--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1466,7 +1466,7 @@ body {
 }
 
 .slider-2 .slick-dots .slick-active button{
-  background-color: #000 !important;
+  background-color: #fff !important;
   opacity: 1 !important;
 }
 
