--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1472,10 +1472,39 @@ body {
 
 .slider-2 .slick-dots li button:before,
 .slider-2 .slick-dots li button:after{
-  
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #1da1f2;
+  border-radius: 50%;
+  box-sizing: border-box;
+  pointer-events: none;
+  animation: pulsate 2s linear infinite;
   
 }
 
+.slider-2 .slick-dots li button:after{
+  animation-delay: 1s;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
 
 .slider-3 .slick-dots {
   z-index: 3;
