--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1470,8 +1470,8 @@ body {
   opacity: 1 !important;
 }
 
-.slider-2 .slick-dots li button:before,
-.slider-2 .slick-dots li button:after{
+.slider-2 .slick-dots .slick-active button:before,
+.slider-2 .slick-dots .slick-active button:after{
   content: "";
   display: block;
   position: absolute;
@@ -1482,7 +1482,7 @@ body {
   margin: auto;
   width: 100%;
   height: 100%;
-  border: 1px solid #1da1f2;
+  border: 1px solid #fff;
   border-radius: 50%;
   box-sizing: border-box;
   pointer-events: none;
