--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1490,7 +1490,7 @@ body {
   
 }
 
-.slider-2 .slick-dots li button:after{
+.slider-2 .slick-dots .slick-active button:after{
   animation-delay: 1s;
 }
 
