--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -1441,17 +1441,23 @@ body {
   height: 82.1875vw;
 }
 
+.slider-2 .slick-dots li{
+  margin: 0 5px !important;
+}
+
 .slider-2 .slick-dots li button{
   z-index: 3;
   position: relative;
-  width: 20px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
   background-color: #fff;
   opacity: .3;
 
 }
 
+
+/* slickカスタマイズここから */
 .slider-2 .slick-dots li button:before{
   font-size: 80px !important;
   color: #fff;
@@ -1464,6 +1470,8 @@ body {
   background-color: #fff; */
 
 }
+
+
 
 .slider-2 .slick-dots .slick-active button{
   background-color: #fff !important;
@@ -1505,6 +1513,9 @@ body {
     opacity: 0;
   }
 }
+
+
+/* slickカスタマイズ ここまで*/
 
 .slider-3 .slick-dots {
   z-index: 3;
