accessリンク追加

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -236,7 +236,7 @@
                 </div>
             </section>
 
-            <section class="access">
+            <section class="access" id="access">
                 <p class="access__num section__num">05.</p>
                 <h2 class="access__ttl">access</h2>
                 <h3 class="access__subTtl">アクセス</h3>
