--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -143,7 +143,7 @@
                
 
                 <ul class="menu">
-                {% for link in linklists.sub-menu.links %}
+                {% for link in linklists.main-menu.links %}
                      <li class="menu__item">
                         <a href="{{ link.url }}">{{link.title}}</a>
                      </li>
