フッターにリンクを追加

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,5 +1,5 @@
         <footer id="footer">
-            <a href="" class="sns"><span class="fa-facebook-square"></span></a>
+            <a href="https://www.facebook.com/shiorifamily/" class="sns"><span class="fa-facebook-square"></span></a>
             <nav class="footerNav">
                 <ul class="menu">
                     <li class="menu__item">
