--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -52,7 +52,8 @@
 
 
             <a class="iframe-plan-sp btn res-price__btn1" href="https://webpack2.jp/reserve/calendar/visitor/533302">
-              予約はこちらからバナーが入る
+              <img src="{{'reserve_banner.jpg'}}" alt="予約バナー">
+
             </a>
 
 {% comment %} ここまで {% endcomment %}
