予約バナーの追加予約バナーの追加

--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -51,7 +51,7 @@
 
 
 
-            <a class="iframe-plan-sp btn res-price__btn1" href="https://webpack2.jp/reserve/calendar/visitor/533302">
+            <a class="iframe-plan-sp  res-price__btn1" href="https://webpack2.jp/reserve/calendar/visitor/533302">
               <img src="{{'reserve_banner.jpg' | asset_img_url : '2000x'}}" alt="予約バナー">
 
             </a>
