予約バナーの追加予約バナーの追加

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2166,6 +2166,16 @@ th {
   display: none;
 }
 
+.iframe-plan-sp{
+  width: 100%;
+}
+
+.iframe-plan-sp img{
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+}
+
 @media(max-width: 600px) {
   .iframe-plan{
     display: none;
