予約バナーの追加予約バナーの追加

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2176,12 +2176,20 @@ th {
   width: 300px;
 }
 
+
+
 @media(max-width: 600px) {
   .iframe-plan{
     display: none;
   }
   .iframe-plan-sp{
     display: block;
+  }
+}
+
+@media(max-width: 300px){
+  .iframe-plan-sp img{
+    width: 100%;
   }
 }
 
