予約バナーの追加予約バナーの追加

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -5253,6 +5253,7 @@ textarea {
   }
   .slider-2__ttl{
     font-size: 18px;
+    padding-top: 50px;
   }
   .slider-2__text{
     font-size: 13px;
