--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -327,11 +327,11 @@
                     </tbody>
                 </table>
             </section>
-            <div class="table__note--wrap">
+            {% comment %} <div class="table__note--wrap">
                 <p class="table__note">料金表：</p>
                 <p class="table__note">電話予約：</p>
                 <p class="table__note">ネット予約：</p>
-            </div>
+            </div> {% endcomment %}
             <div class="res-price__btn--wrap">
                 <a href="{{pages.course.url}}" class="btn res-price__btn1">コースガイド</a>
                 <a href="{{pages.facility.url}}" class="btn res-price__btn2">施設案内はこちら</a>
